Add description and update copyright date

--- a/README
+++ b/README
@@ -1,6 +1,13 @@
 NAME
     RT-Extension-HistoryOnChange - Show history on ticket modify page
 
+DESCRIPTION
+    Displays ticket history at the bottom of the the Basics page when you
+    modify values on a ticket.
+
+RT VERSIONS
+    Works with RT 4.2.
+
 INSTALLATION
     "perl Makefile.PL"
     "make"
@@ -51,7 +58,7 @@ BUGS
     Change>.
 
 LICENSE AND COPYRIGHT
-    This software is Copyright 2013 Best Practical Solutions, LLC.
+    This software is Copyright 2014 Best Practical Solutions, LLC.
 
     This is free software, licensed under:
 
