update document to make it clear it works on future RT versions
because 4.4 is nearly out.

--- a/README
+++ b/README
@@ -6,7 +6,7 @@ DESCRIPTION
     modify values on a ticket.
 
 RT VERSIONS
-    Works with RT 4.2.
+    Works with RT 4.2 and later versions.
 
 INSTALLATION
     "perl Makefile.PL"
